changed font for password output and fixed textarea wrapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,3 +25,8 @@ body {
 .no-show {
     display: none;
 }
+
+#passwordOutput {    
+    font-family: 'Biryani', sans-serif;
+    word-break: break-all;
+}
